# Gerrit-to-Github-Issues

./: .gitignore  AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py
examples/: example.j2.txt  example.toml
gerrit_to_github_issues/: __main__.py  cli.py  engine.py  errors.py  gerrit.py  github_issues.py
