[metadata]
name = gerrit-to-github-issues
version = 0.0.1
summary = Updates Github Issues with new related Gerrit changes
description = A set of scripts that can be used to synchronize/update Github Issues with data from a Gerrit instance.
description-file = README.md
author = Ian H. Pittwood
license = Apache-2
requires-python = >=3.6
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    gerrit_to_github_issues

[entry_points]
console_scripts =
    gerrit-to-github-issues = gerrit_to_github_issues.cli:main

[bdist_wheel]
universal = 0